force-app/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABA_Routing_Number__c</fullName>
        <label>ABA/Routing Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Accreditation_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member is part of the Accredited/Accreditation applicant audience group and has access to additional resources on the Schools portal</description>
        <inlineHelpText>Member is part of the Accredited/Accreditation applicant audience group and has access to additional resources on the Schools portal</inlineHelpText>
        <label>Access Accreditation Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountNameValidation__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNameValidation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountTradingCurrencyHelper__c</fullName>
        <description>Helper field to expose the value of the Account Trading Currency -field to Community users.</description>
        <label>Account Trading Currency Helper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_External_ID__c</fullName>
        <description>The ID Account fields have in Microsoft Dynamics</description>
        <externalId>true</externalId>
        <label>Account External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Id_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Body_Website__c</fullName>
        <label>Accreditation Body Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Accreditation_Coordinator_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This role indicates the person at your school who leads the CIS accreditation process. If your school is not in the CIS accreditation process, this field will be blank</inlineHelpText>
        <label>CIS Accreditation Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Accreditation Coordinator Contact)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation_Status__c</fullName>
        <formula>BLANKVALUE(Aggregate_Result__r.Accreditation_Status__c , &quot;N/A&quot;)</formula>
        <label>Accreditation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person responsible for updating school data including academic year figures and school contacts.</inlineHelpText>
        <label>Administrative Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Administrative Contact)</relationshipLabel>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admissions_Website__c</fullName>
        <description>This field is used to collect information from the Membership Eligibility form for universities</description>
        <label>Admissions Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Admissions_criteria_and_policy__c</fullName>
        <label>Admissions criteria and policy</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aggregate_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aggregate Result</label>
        <referenceTo>AggregateResult__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlchemerAccountID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID generated by Alchemer, pushed to Salesforce via Alchemer-SF integration. This allows Alchemer to lookup the account again in the same survey</description>
        <externalId>true</externalId>
        <label>AlchemerAccountID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>All_Survey_Code__c</fullName>
        <description>Code assigned to each school to review the aggregate Community Survey.</description>
        <label>Survey Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Accreditation_Cycle__c</fullName>
        <label>Annual Accreditation Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rolling Accreditation</fullName>
                    <default>true</default>
                    <label>Rolling Accreditation</label>
                </value>
                <value>
                    <fullName>Bulk Accreditation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_background_checks_and_ref_policy__c</fullName>
        <label>Answer background checks and ref. policy</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_commitment_to_PD_of_staff__c</fullName>
        <label>Answer commitment to PD of staff</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_communication_with_parents__c</fullName>
        <label>Answer communication with parents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Answer_health_and_safety_policy__c</fullName>
        <label>Answer health and safety policy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Answer_teacher_list_and_qualifications__c</fullName>
        <label>Answer teacher list and qualifications</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_teacher_other_staff_contract__c</fullName>
        <label>Answer teacher/other staff contract</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_to_boarding_policy_guide__c</fullName>
        <label>Answer to boarding policy/guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Anticipated_Graduates_Current_Year__c</fullName>
        <label>OBSOLETE -Anticipated Grads Current Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Graduates_Next_Year__c</fullName>
        <label>OBSOLETE Anticipated Graduates Next Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <description>To be used for both Schools and Universities</description>
        <label>Areas of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inclusion via Diversity, Equity &amp; Anti-racism (I-DEA)</fullName>
                </value>
                <value>
                    <fullName>School and University Leadership Collaboration</fullName>
                </value>
                <value>
                    <fullName>School Safeguarding &amp; Child Protection</fullName>
                </value>
                <value>
                    <fullName>International Accreditation &amp; Global Recognition</fullName>
                </value>
                <value>
                    <fullName>Institutional Evaluation &amp; Improvement</fullName>
                </value>
                <value>
                    <fullName>Becoming a Volunteer Accreditation Evaluator</fullName>
                </value>
                <value>
                    <fullName>Data Protection &amp; Cyberbullying</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Trends in International Accreditation</fullName>
                </value>
                <value>
                    <fullName>Student Support: Mental Health &amp; Well-Being</fullName>
                </value>
                <value>
                    <fullName>Assessing Educational Achievement</fullName>
                </value>
                <value>
                    <fullName>University Guidance &amp; Admission</fullName>
                </value>
                <value>
                    <fullName>Student Services</fullName>
                </value>
                <value>
                    <fullName>Student Recruitment</fullName>
                </value>
                <value>
                    <fullName>Institutional Improvement &amp; Recognition</fullName>
                </value>
                <value>
                    <fullName>University Student Mobility &amp; Transition</fullName>
                    <isActive>false</isActive>
                    <label>University Student Mobility &amp; Transition</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Areas_of_Interest_for_Report__c</fullName>
        <label>Areas of Interest for Report</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <description>Used for Fast Forms Stripe payment</description>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_First_Name__c</fullName>
        <description>Used for Fast Forms Stripe payment</description>
        <label>Billing First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Last_Name__c</fullName>
        <description>Used for Fast Forms Stripe payment</description>
        <label>Billing Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_US_States__c</fullName>
        <label>Billing US States</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CEEB_Code__c</fullName>
        <description>CEEB codes are established by the College Board as unique identifiers for institutions in the US and internationally</description>
        <label>CEEB Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_ALL_Email_address__c</fullName>
        <inlineHelpText>Your institution&apos;s general email address. For example, info@iss.edu.</inlineHelpText>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CIS_ALL_Main_Phone_Number__c</fullName>
        <description>Important for public directory</description>
        <inlineHelpText>Phone number for public CIS membership directory.</inlineHelpText>
        <label>Main Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CIS_ALL_Religious_Affiliation__c</fullName>
        <label>Religious Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Islamic</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Methodist</fullName>
                </value>
                <value>
                    <fullName>Non-denominational</fullName>
                </value>
                <value>
                    <fullName>None/independent</fullName>
                </value>
                <value>
                    <fullName>Other Christian</fullName>
                </value>
                <value>
                    <fullName>Other Religious Affiliation</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_ALL_Single_Sex_Institution__c</fullName>
        <label>Student Enrollment Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coeducational</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Coeducational</label>
                </value>
                <value>
                    <fullName>All Male</fullName>
                    <color>#78C953</color>
                    <label>Only Male</label>
                </value>
                <value>
                    <fullName>All Female</fullName>
                    <color>#E27001</color>
                    <label>Only Female</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_ALL_Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_ALL_VAT_Registration_Number__c</fullName>
        <inlineHelpText>For institutions in the European Union (EU) only.</inlineHelpText>
        <label>VAT Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_Code_of_Ethics_Reflection__c</fullName>
        <label>CIS Code of Ethics Reflection</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Associate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Bachelors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bachelors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Doctorate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doctorate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_HE_EAL_ESL_program_on_campus__c</fullName>
        <description>This field is used to collect information gathered in the Membership Eligibility form for universities</description>
        <label>EAL/ESL program on campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_For_profit_or_Non_profit__c</fullName>
        <description>This field is used to collect information gathered in the Membership Eligibility form for universities</description>
        <label>For-profit or Non-profit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Profit</fullName>
                </value>
                <value>
                    <fullName>Non-profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Urban</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Masters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Masters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Public_or_Private__c</fullName>
        <label>Public or Private</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Regional_Acc_Org__c</fullName>
        <label>Accreditation Organisation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Learning Commission</fullName>
                </value>
                <value>
                    <fullName>Middle States Commission on Higher Education</fullName>
                </value>
                <value>
                    <fullName>New England Association of Schools and Colleges</fullName>
                </value>
                <value>
                    <fullName>Northwest Accreditation Commission</fullName>
                </value>
                <value>
                    <fullName>Southern Association of Colleges and Schools</fullName>
                </value>
                <value>
                    <fullName>Western Association of Schools and Colleges</fullName>
                </value>
                <value>
                    <fullName>UK Department for Education</fullName>
                </value>
                <value>
                    <fullName>Swiss University Conference (SUK/CUS)</fullName>
                </value>
                <value>
                    <fullName>Nederlands-Vlaamse Accreditatie Organisatie (NVAO)</fullName>
                </value>
                <value>
                    <fullName>Chinese Ministry of Education</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Education Bureau</fullName>
                </value>
                <value>
                    <fullName>Singaporean Ministry of Education</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_RAge_limit_for_candidates_hired__c</fullName>
        <label>Age Limit for Candidates Hired?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_RTotal_Perm_Spend__c</fullName>
        <label>Total Perm Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIS_RTotal_Retained_Spend__c</fullName>
        <label>Total Retained Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIS_RTotal_Temp_Spend__c</fullName>
        <label>Total Temp Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_AAIE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Association for the Advancement of International Education</description>
        <label>AAIE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_AASSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>American International Schools in the Americas, formerly known as AASSA</description>
        <inlineHelpText>American International Schools in the Americas</inlineHelpText>
        <label>AMISA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_ACAMIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Association of China and Mongolia International Schools</description>
        <label>ACAMIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_ACES__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Adverse Childhood Experiences Study</description>
        <label>ACES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_AGIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Association of German International Schools</description>
        <label>AGIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_AICE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Advanced International Certificate of Education</inlineHelpText>
        <label>Advanced Intl Certificate of Educ (AICE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_AISA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Association of International Schools in Africa</description>
        <label>AISA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_AISH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Academy for International School Heads</description>
        <label>AISH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Placement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_AS_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Subsidiary Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_A_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>General Certificate of Education- Advanced Level</inlineHelpText>
        <label>GCE Advanced Level (A Level)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Academic_Calendar_link__c</fullName>
        <label>Academic calendar link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Account_code__c</fullName>
        <label>Account code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Answer_Provide_admis_criteria__c</fullName>
        <label>Answer Provide admis criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Answer_Provide_guiding_statement__c</fullName>
        <label>Answer Provide guiding statement</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Answer_Provide_parents_guide__c</fullName>
        <label>Answer Provide parents guide</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Answer_guide_board_or_home__c</fullName>
        <label>Answer guide board or home</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Answer_parents_comm__c</fullName>
        <label>Answer parents comm</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Answer_provide_example_of_policy__c</fullName>
        <label>Health and Safety Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_BSME__c</fullName>
        <defaultValue>false</defaultValue>
        <description>British Schools of the Middle East</description>
        <label>BSME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Boarding__c</fullName>
        <description>This field is used in the integration with Armature and is used to determine which instrument will be made available to a school</description>
        <label>Boarding/Homestay</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boarding</fullName>
                    <color>#0B6FCE</color>
                    <label>Boarding</label>
                </value>
                <value>
                    <fullName>Homestay</fullName>
                    <color>#78C953</color>
                    <label>Homestay</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_CEESA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Central and Eastern European Schools Association</description>
        <label>CEESA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_COBIS_Membershiporganisations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Council of British International Schools</description>
        <label>COBIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>There is another field title IB Career-related Programme (CP).</description>
        <label>(999) CP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Cambridge_Pre_U__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cambridge Pre-U</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Country_SoP_for_Ministry_of__c</fullName>
        <description>Identifies what country/state or province the Ministry of Educationrepresents</description>
        <inlineHelpText>If you indicated Ministry of Education as an Accreditation/Evaluation Organisation, list country, state or province.</inlineHelpText>
        <label>Country, State, Province for MoE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Students_Early_Childhood__c</fullName>
        <description>Field also exists in Academic Year Figures.</description>
        <label>Current Students Early Childhood</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Students_Middle_School__c</fullName>
        <description>Field also exists in Acadmic Year Figures.</description>
        <label>Current Students Middle School</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Students_Primary_Element__c</fullName>
        <description>Field also exists in Academic Year Figures.</description>
        <label>Current Students Primary/Elementar</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Students_Senior_High_Sch__c</fullName>
        <description>Field also avaiable in Academic Year Figures.</description>
        <label>Current Students Senior/High Schoo</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_EARCOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>East Asia Regional Council of Schools</description>
        <label>EARCOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_ECIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Educational Collaborative for International Schools</description>
        <label>ECIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Early_Childhood__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Childhood</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_FOBISIA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Federation of British International Schools in Asia</description>
        <label>FOBISIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_GCSE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>General Certification of Secondary Education</inlineHelpText>
        <label>General Cert of Secondary Edu (GCSE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Governance__c</fullName>
        <label>Governance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company School</fullName>
                    <color>#0B6FCE</color>
                    <label>Company School</label>
                </value>
                <value>
                    <fullName>Independent, Foundation or Association School</fullName>
                    <color>#78C953</color>
                    <label>Independent, Foundation or Association School</label>
                </value>
                <value>
                    <fullName>Proprietary School</fullName>
                    <color>#E27001</color>
                    <label>Proprietary School</label>
                </value>
                <value>
                    <fullName>State or Government School</fullName>
                    <color>#A845DC</color>
                    <label>State or Government School</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Grade__c</fullName>
        <description>Grading of the School membership applications.</description>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatically_created</fullName>
                    <label>Automatically created</label>
                </value>
                <value>
                    <fullName>0 - New application</fullName>
                </value>
                <value>
                    <fullName>1 - Form 2 submitted</fullName>
                </value>
                <value>
                    <fullName>2 - Form 3 submitted</fullName>
                </value>
                <value>
                    <fullName>A - Fast Track</fullName>
                </value>
                <value>
                    <fullName>B - Standard</fullName>
                </value>
                <value>
                    <fullName>E - Not Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_IBCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IB Career-related programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_IBDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IB Diploma Programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_IBMYP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IB Middle Years Programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_IBPYP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IB Primary Years Programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_IEYC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>International Early Years Curriculum (IEYC) - Fieldwork</description>
        <label>International Early Years Curriculum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_IGCSE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cambridge International General Certificate of Secondary Education</inlineHelpText>
        <label>Cambridge IGCSE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_IMYC_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IMYC_Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_IMYC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Middle Years Curriculum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_IPC_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPC_Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_IPC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Primary Curriculum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_JCIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Japan Council of International Schools</description>
        <label>JCIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_LAHC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Latin American Heads Conference</description>
        <label>LAHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_LSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Languages for Specific Purposes</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>